@@ -1,3 +1,4 @@
 language: ruby
 rvm:
   - 1.9.3
+  - 2.0.0
